--- a/notebooks/AnoPrimer-short.ipynb
+++ b/notebooks/AnoPrimer-short.ipynb
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "NCEovYA6RrH4",
         "cellView": "form"
@@ -64,7 +64,7 @@
         "\n",
         "species = 'gambiae_sl' #@param [\"gambiae_sl\", \"funestus\"]\n",
         "assay_type = 'cDNA primers'           #@param [\"gDNA primers\", \"gDNA primers + probe\", \"probe\", \"cDNA primers\"]\n",
-        "assay_name = 'coeae2f'        #@param {type:\"string\"}\n",
+        "assay_name = 'Cyp6p3'        #@param {type:\"string\"}\n",
         "min_amplicon_size = 60        #@param {type:\"integer\"}\n",
         "max_amplicon_size = 120      #@param {type:\"integer\"}\n",
         "amplicon_size_range = [[min_amplicon_size, max_amplicon_size]]\n",
@@ -74,7 +74,7 @@
         "#@markdown\n",
         "#@markdown primer_target should be a region string ('2L:28545767') for gDNA primers and probes, and an AGAP transcript identifier for cDNA primers.\n",
         "\n",
-        "primer_target = 'AGAP006228-RA'      #@param {type:\"string\"}"
+        "primer_target = 'AGAP002865-RA'      #@param {type:\"string\"}"
       ]
     },
     {
@@ -122,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Finally, lets evaluate our primers, by looking for SNPs in the primer binding sites, plotting the primer locations in contrast to any nearby genes and exons, and in the case of *An. gambiae s.l*, checking for specificity by aligning to the *An. gambiae* genome. You may want to change the Ag1000g sample set that we compare to. To see a full list of available sample sets, you can run `primers.summarise_metadata()`"
+        "Finally, lets evaluate our primers, by looking for SNPs in the primer binding sites, plotting the primer locations in contrast to any nearby genes and exons, and in the case of *An. gambiae s.l*, checking for specificity by aligning to the *An. gambiae* genome."
       ],
       "metadata": {
         "id": "4Sq8x55m-sDI"
@@ -136,7 +136,7 @@
       },
       "outputs": [],
       "source": [
-        "primers.evaluate_primers(sample_sets=['AG1000G-BF-A'], sample_query=None, out_dir=\"./\")"
+        "primers.evaluate_primers(sample_sets='3.0', sample_query=None, out_dir=\"./\")"
       ]
     }
   ],
